<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FoodActivity">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="513dp"
        android:layout_marginBottom="448dp"
        android:background="@drawable/search_view_bg"
        app:iconifiedByDefault="false"
        app:layout_constraintBottom_toTopOf="@+id/bottomNav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.013"
        app:queryHint="Search item..." />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:background="@color/darkRed"
        android:gravity="center"
        android:letterSpacing="0.2"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/orange"
        android:textColorHighlight="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@color/darkRed"
        android:contentDescription="@string/food_tab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dogshoppe_logo"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/tvGroomTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="75dp"
        android:text="@string/groom_tab"
        android:textColor="@color/orange"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <GridView
        android:id="@+id/gvGroom"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="125dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:numColumns="2"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/bottomNav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />

    <TableRow
        android:id="@+id/bottomNav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/darkRed"
        android:gravity="center"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/darkRed"
            android:contentDescription="@string/home_button"
            android:cropToPadding="false"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:visibility="visible"
            app:srcCompat="@drawable/brown_home_icon"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

        <ImageButton
            android:id="@+id/search_b1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/darkRed"
            android:contentDescription="@string/search_button"
            android:cropToPadding="false"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:visibility="visible"
            app:srcCompat="@drawable/orange_search_icon"
            tools:ignore="ImageContrastCheck" />

        <ImageButton
            android:id="@+id/cart_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/darkRed"
            android:contentDescription="@string/cart_button"
            android:cropToPadding="false"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:visibility="visible"
            app:srcCompat="@drawable/brown_cart"
            tools:ignore="ImageContrastCheck" />

        <ImageButton
            android:id="@+id/wishlist_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/darkRed"
            android:contentDescription="@string/wish_button"
            android:cropToPadding="false"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:visibility="visible"
            app:srcCompat="@drawable/brown"
            tools:ignore="ImageContrastCheck" />

    </TableRow>

</androidx.constraintlayout.widget.ConstraintLayout>