<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homePage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:contentDescription="@string/appbar_scrolling_view_behavior"
    android:isScrollContainer="true"
    android:orientation="vertical"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@color/darkRed"
        android:contentDescription="@string/food_tab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dogshoppe_logo"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/darkRed"
        android:gravity="center"
        android:letterSpacing="0.2"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/orange"
        android:textColorHighlight="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="5dp"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottomNav"
        app:layout_constraintTop_toBottomOf="@id/textView">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="Recently Viewed"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvRecentItemsImgs"
                android:layout_width="match_parent"
                android:layout_height="220dp"/>


            <Button
                android:id="@+id/foodButton"
                android:layout_width="375dp"
                android:layout_height="70dp"
                android:text="@string/food_tab"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="34sp"
                android:textStyle="bold"
                android:visibility="visible"
                app:cornerRadius="15dp"
                app:icon="@drawable/food_icon"
                app:iconGravity="start"
                app:iconPadding="20dp"
                app:iconSize="50dp"
                app:iconTint="@color/white"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/toyButton"
                android:layout_width="375dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/toy_tab"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="34sp"
                android:textStyle="bold"
                android:visibility="visible"
                app:cornerRadius="15dp"
                app:icon="@drawable/toys_icon"
                app:iconGravity="start"
                app:iconPadding="20dp"
                app:iconSize="50dp"
                app:iconTint="@color/white"
                tools:ignore="DuplicateSpeakableTextCheck" />

                <Button
                android:id="@+id/groomButton"
                android:layout_width="375dp"
                android:layout_height="70dp"
                android:text="@string/groom_tab"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="34sp"
                android:textStyle="bold"
                android:visibility="visible"
                app:cornerRadius="15dp"
                app:icon="@drawable/scissors_icon"
                app:iconGravity="start"
                app:iconPadding="20dp"
                app:iconSize="50dp"
                app:iconTint="@color/white"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/accButton"
                android:layout_width="375dp"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:text="@string/acc_tab"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="34sp"
                android:textStyle="bold"
                android:visibility="visible"
                app:cornerRadius="15dp"
                app:icon="@drawable/collar_icon"
                app:iconGravity="start"
                app:iconPadding="20dp"
                app:iconSize="50dp"
                app:iconTint="@color/white"
                tools:ignore="DuplicateSpeakableTextCheck" />
        </LinearLayout>
    </ScrollView>
    <TableRow
        android:id="@+id/bottomNav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/darkRed"
        android:gravity="center"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/darkRed"
            android:contentDescription="@string/home_button"
            android:cropToPadding="false"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:visibility="visible"
            app:srcCompat="@drawable/orange_home_icon"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/search_b3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/darkRed"
            android:contentDescription="@string/search_button"
            android:cropToPadding="false"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:visibility="visible"
            app:srcCompat="@drawable/brown_search_icon"
            tools:ignore="ImageContrastCheck" />

        <ImageButton
            android:id="@+id/cart_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/darkRed"
            android:contentDescription="@string/cart_button"
            android:cropToPadding="false"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:visibility="visible"
            app:srcCompat="@drawable/brown_cart"
            tools:ignore="ImageContrastCheck" />

        <ImageButton
            android:id="@+id/wishlist_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/darkRed"
            android:contentDescription="@string/wish_button"
            android:cropToPadding="false"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:visibility="visible"
            app:srcCompat="@drawable/brown"
            tools:ignore="ImageContrastCheck" />

    </TableRow>


</androidx.constraintlayout.widget.ConstraintLayout>