<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/orange"
    android:orientation="vertical"
    tools:context=".SearchActivity">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginBottom="508dp"
        android:background="@drawable/search_view_bg"
        app:iconifiedByDefault="false"
        app:layout_constraintBottom_toTopOf="@+id/bottomNav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.013"
        app:queryHint="Search item..." />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:foregroundGravity="center"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_view"
        app:layout_constraintBottom_toTopOf="@id/bottomNav">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSearchTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="Search"
                android:textColor="@color/orange"
                android:textSize="30sp"
                app:iconifiedByDefault="false"
                android:visibility="visible"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                tools:ignore="TextContrastCheck" />
            <Button
                android:id="@+id/foodButton2"
                android:layout_width="374dp"
                android:layout_height="70dp"
                android:text="@string/food_tab"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="34sp"
                android:textStyle="bold"
                android:visibility="visible"
                app:cornerRadius="15dp"
                app:icon="@drawable/food_icon"
                android:layout_marginBottom="10dp"
                app:iconGravity="start"
                app:iconPadding="20dp"
                app:iconSize="50dp"
                app:iconTint="@color/white"
                android:layout_below="@id/tvSearchTitle"
                android:layout_centerHorizontal="true"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/accButton2"
                android:layout_width="374dp"
                android:layout_height="70dp"
                android:layout_marginBottom="10dp"
                android:text="@string/acc_tab"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="34sp"
                android:textStyle="bold"
                android:visibility="visible"
                app:cornerRadius="15dp"
                app:icon="@drawable/collar_icon"
                app:iconGravity="start"
                app:iconPadding="20dp"
                app:iconSize="50dp"
                app:iconTint="@color/white"
                android:layout_below="@id/groomButton2"
                android:layout_centerHorizontal="true"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/groomButton2"
                android:layout_width="374dp"
                android:layout_height="70dp"
                android:layout_marginBottom="10dp"
                android:text="@string/groom_tab"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="34sp"
                android:textStyle="bold"
                android:visibility="visible"
                app:cornerRadius="15dp"
                app:icon="@drawable/scissors_icon"
                app:iconGravity="start"
                app:iconPadding="20dp"
                app:iconSize="50dp"
                app:iconTint="@color/white"
                android:layout_below="@id/toyButton2"
                android:layout_centerHorizontal="true"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/toyButton2"
                android:layout_width="374dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_centerHorizontal="true"
                android:text="@string/toy_tab"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="34sp"
                android:textStyle="bold"
                android:visibility="visible"
                app:cornerRadius="15dp"
                app:icon="@drawable/toys_icon"
                app:iconGravity="start"
                app:iconPadding="20dp"
                app:iconSize="50dp"
                app:iconTint="@color/white"
                android:layout_below="@id/foodButton2"
                tools:ignore="DuplicateSpeakableTextCheck" />

        </RelativeLayout>
    </ScrollView>
    <GridView
        android:id="@+id/gvSearch"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="125dp"
        android:layout_marginBottom="15dp"
        android:clickable="true"
        android:focusedByDefault="true"
        android:gravity="center"
        android:numColumns="2"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/bottomNav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="1.0"
        android:focusable="true" />
    <TableRow
        android:id="@+id/bottomNav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/darkRed"
        android:gravity="center"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/darkRed"
            android:contentDescription="@string/home_button"
            android:cropToPadding="false"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:visibility="visible"
            app:srcCompat="@drawable/brown_home_icon"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

        <ImageButton
            android:id="@+id/search_b3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/darkRed"
            android:contentDescription="@string/search_button"
            android:cropToPadding="false"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:visibility="visible"
            app:srcCompat="@drawable/orange_search_icon"
            tools:ignore="ImageContrastCheck" />

        <ImageButton
            android:id="@+id/cart_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/darkRed"
            android:contentDescription="@string/cart_button"
            android:cropToPadding="false"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:visibility="visible"
            app:srcCompat="@drawable/brown_cart"
            tools:ignore="ImageContrastCheck" />

        <ImageButton
            android:id="@+id/wishlist_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/darkRed"
            android:contentDescription="@string/wish_button"
            android:cropToPadding="false"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:visibility="visible"
            app:srcCompat="@drawable/brown"
            tools:ignore="ImageContrastCheck" />

    </TableRow>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@color/darkRed"
        android:contentDescription="@string/food_tab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dogshoppe_logo"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/darkRed"
        android:gravity="center"
        android:letterSpacing="0.2"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/orange"
        android:textColorHighlight="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>